fix numeric list (for term meanings) left margin alignment

--- a/Client/src/styles/custom/styles.less
+++ b/Client/src/styles/custom/styles.less
@@ -106,6 +106,7 @@ body {
 
     .meanings {
       padding-left: 20px;
+      list-style-position: inside;
     }
 
     .commentLink {
